# PowerPC_HLS

./: CMakeLists.txt  LICENSE  README.md
src/: branch_processor.cpp  branch_processor.hpp  decode_utils.hpp  fixed_point_processor.cpp  fixed_point_processor.hpp  fixed_point_processor.tpp  fixed_point_utils.cpp  fixed_point_utils.hpp  floating_point_processor.cpp  floating_point_processor.hpp  floating_point_utils.cpp  floating_point_utils.hpp  instruction_decode.cpp  instruction_decode.hpp  main.c  main.cpp  pipeline.cpp  pipeline.hpp  ppc_types.h  registers.hpp  test_bench_utils.cpp  test_bench_utils.hpp  test_top.cpp
tests/: addi.S
tests/assembly/: led.as
tests/binaries/: led.coe  led.elf  led_short.elf
tests/programs/: add_1.json  add_3.json  add_5.json  addic_0.json  addic_1.json  addis_0.json  addme_0.json  addme_1.json  addze_0.json  mulli_0.json  mulli_1.json  mulli_2.json  mulli_3.json  mullw_0.json  subf_0.json  subf_1.json
tests/programs/branch_processor/branch/: b_0.json  b_1.json  b_2.json  b_3.json  bc_0.json  bc_1.json  bc_2.json  bc_3.json  bc_4.json  bcctr_0.json  bcctrl_0.json  bclr_0.json  bclr_1.json
tests/programs/branch_processor/condition/: crand_0.json  crandc_0.json  creqv_0.json  crnand_0.json  crnor_0.json  cror_0.json  crorc_0.json  crxor_0.json  mcrf_0.json  mcrf_1.json
tests/programs/fixed_point_processor/addition/: add_0.json  add_2.json  add_4.json  addc_0.json  adde_0.json  adde_1.json  addi_0.json  addi_1.json  addi_2.json  addic_2.json  addic_3.json  addic_4.json  addis_1.json  addme_0.json  addze_1.json  addze_2.json  (+1 more)
(+183 files in other folders)
